--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Webpack Boilerplate</title>
+    <title>Feedback Page</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.main.css %>"/>
   </head>
@@ -16,30 +16,29 @@
           </div>
         </div>
       </header>
-      <section>
+      <section class="content">
         <div class="row">
           <div class="col-sm-6">
             <form id="feedback-form" name="feedback-form">
               <div class="form-group">
                 <label for="exampleInputPassword1">Name</label>
-                <input
-                  type="text"
-                  required="required"
-                  class="form-control required"
+                <input type="text" 
+                  required="required" 
+                  class="form-control required" 
                   id="name"
-                  name="name"
-                  placeholder="Full Name"
-                />
+                  name="name" 
+                  placeholder="Your name"/>
               </div>
               <div class="form-group">
                 <label for="email">Email address</label>
                 <input
                   type="email"
                   name="email"
+                  required="required" 
                   class="form-control"
                   id="email"
                   aria-describedby="emailHelp"
-                  placeholder="Enter email"
+                  placeholder="Your email"
                 />
                 <small id="emailHelp" class="form-text text-muted"
                   >We'll never share your email with anyone else.</small
@@ -61,6 +60,7 @@
                   class="form-control"
                   name="comment"
                   id="comment"
+                  required="required"
                   rows="5"
                 ></textarea>
               </div>
@@ -71,18 +71,14 @@
             <canvas id="bar-chart"></canvas>
           </div>
         </div>
-        <div class="row">
+        <div class="row py-5">
+          <div class="col-sm-12"><h2>Other comments</h2></div>
           <di class="col-sm-12">
             <article class="written-comments"></article>
           </div>
         </div>
       </section>
-      <footer></footer>
     </div>
-
-    <script
-      defer
-      src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"
-    ></script>
+    <script defer src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
   </body>
 </html>
